Handle throwables with empty stack traces